--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ h1 {
     margin-top:5px;
 }
 .pizza-item--name {
+    text-transform: uppercase;
     font-size:20px;
     font-weight: bold;
     color:#000;
